whySection scrolling troubles?

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
 
 
-<!-------------------------------------------------------------------------------------->
+
 <!-----------------------------------NAVIGATION-------------------------------------------->
-<!-------------------------------------------------------------------------------------->
+
 <div class="navigationBar">
     <img src="/images/logo.webp" alt="logo">
     <div id="menu">
@@ -46,13 +46,13 @@
         <span></span>
     </div>
 </div>
-<!-------------------------------------------------------------------------------------->
-<!-----------------------------------NAVIGATION-------------------------------------------->
-<!-------------------------------------------------------------------------------------->
 
-<!-------------------------------------------------------------------------------------->
+<!-----------------------------------NAVIGATION-------------------------------------------->
+
+
+
 <!-----------------------------------LANDING-------------------------------------------->
-<!-------------------------------------------------------------------------------------->
+
 <div class="landing">
 
 
@@ -72,14 +72,14 @@
 
 
 </div>
-<!-------------------------------------------------------------------------------------->
+
 <!-----------------------------------LANDING-------------------------------------------->
-<!-------------------------------------------------------------------------------------->
 
 
-<!-------------------------------------------------------------------------------------->
+
+
 <!-----------------------------------SERVICES------------------------------------------->
-<!-------------------------------------------------------------------------------------->
+
 
 <div class="servicesSection">
 
@@ -126,14 +126,14 @@
     </div>
 
 </div>
-<!-------------------------------------------------------------------------------------->
+
 <!-----------------------------------SERVICES------------------------------------------->
-<!-------------------------------------------------------------------------------------->
 
 
-<!-------------------------------------------------------------------------------------->
-<!-----------------------------------ABOUT---00----------------------------------------->
-<!-------------------------------------------------------------------------------------->
+
+
+<!-----------------------------------ABOUT---------------------------------------------->
+
 <div class="aboutSection">
 
     <div class="additionalQuestion">
@@ -189,29 +189,74 @@
 </div>
 
 
-<!-------------------------------------------------------------------------------------->
+
 <!-----------------------------------ABOUT---------------------------------------------->
-<!-------------------------------------------------------------------------------------->
-
-<!-------------------------------------------------------------------------------------->
-<!-----------------------------------PORTFOLIO------------------------------------------->
-<!-------------------------------------------------------------------------------------->
 
 
 
-<!-------------------------------------------------------------------------------------->
-<!-----------------------------------PORTFOLIO------------------------------------------>
-<!-------------------------------------------------------------------------------------->
+<!-----------------------------------WHYSECTION----------------------------------------->
+<div class="whySection">
 
-<!-------------------------------------------------------------------------------------->
+
+
+    <div class="titleSection">
+        <b>Our Strengths</b>
+        <p>Why Choose CanDo</p>
+        <div class="circles">
+            <span></span>
+            <span class="biggerCircle"></span>
+            <span></span>
+        </div>
+  
+    </div>
+
+
+    <div class="whySectionContent">
+        <div class="whyReason">
+            <div class="whyReasonImage image1"></div>
+       
+            <div class="whyReasonText">
+                <b>Reliability</b>
+                <p>Timely bookkeeping not only saves you from hefty late fees and interest penalties but also fortifies your financial standing. Having a responsive bookkeeper by your side, ready to address your queries, is invaluable—it transforms uncertainties into clarity and grants you unparalleled peace of mind.</p>
+            </div>
+        </div>
+        <div class="whyReason">
+            <div class="whyReasonImage image2"></div>
+            <div class="whyReasonText">
+                <b>Affordability</b>
+                <p>Choosing an affordable bookkeeping solution doesn't mean compromising on quality. It's about optimizing your financial resources, ensuring you get top-notch services without straining your budget. With cost-effective bookkeeping, you're not just saving money; you're investing in peace of mind, knowing every dollar is accounted for without breaking the bank.</p>
+            </div>
+        </div>
+        <div class="whyReason">
+            <div class="whyReasonImage image3"></div>
+            <div class="whyReasonText">
+                <b>Professionalism</b>
+                <p>Professionalism in bookkeeping goes beyond mere number crunching. It's about meticulous attention to detail, upholding the highest standards of accuracy, and delivering consistent results. When you entrust your finances to a truly professional bookkeeper, you're not just getting organized books—you're gaining a partner dedicated to your financial clarity and peace of mind.</p>
+            </div>
+
+          
+        </div>
+
+    </div>
+
+
+</div>
+
+
+
+
+<!-----------------------------------WHYSECTION----------------------------------------->
+
+
+
 <!-----------------------------------FOOTER--------------------------------------------->
-<!-------------------------------------------------------------------------------------->
+
 <footer id="footer">
 
 </footer>
-<!-------------------------------------------------------------------------------------->
+
 <!-----------------------------------FOOTER--------------------------------------------->
-<!-------------------------------------------------------------------------------------->
+
 
 
 </body>
