testimonial and landing corners

--- a/index.html
+++ b/index.html
@@ -54,9 +54,20 @@
 <!-----------------------------------LANDING-------------------------------------------->
 
 <div class="landing">
-
+  
 
     <div class="textContent">
+
+        <div class="landingGraphics">
+            <span class="leftBorder"></span>
+            <span class="rightBorder"></span>
+            <span class="topBorder"></span>
+            <span class="bottomBorder"></span>
+            <div class="triangle topLeft"></div>
+            <div class="triangle topRight"></div>
+            <div class="triangle bottomLeft"></div>
+            <div class="triangle bottomRight"></div>
+        </div>
         <p class="title">CanDo Bookkeeping</p>
         <div class="slogan">
             <b>Mastering Numbers, Maximizing Success!</b>
@@ -151,7 +162,7 @@
     </div>
 
 
-    <div class="titleSection">
+    <div class="secondaryTitleSection">
         <b>Our Story</b>
         <p>About Cando</p>
         <div class="circles">
@@ -250,6 +261,19 @@
 
 <!-----------------------------------TESTIMONIAL---------------------------------------->
 <div class="testimonialSection">
+
+    <div class="secondaryTitleSection">
+        <b>What Do Others Think</b>
+        <p>Customer Testimonials</p>
+        <div class="circles">
+            <span></span>
+            <span class="biggerCircle"></span>
+            <span></span>
+        </div>
+  
+    </div>
+
+
     <div class="testimonial">
         <div class="testimonialGraphics">
             <span class="fa fa-quote-left topLeftQuote"></span>
