working on contact

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <div class=developer> 
             <p>Developed by&nbsp;</p><a href="https://kansasridgewebdesign.ca/">Kansas Ridge Web Design</a>
         </div>
-        <p>© 2023 Red Fox Exteriors</p>
+        <p>© 2023 CanDo Bookkeping</p>
     </div>
     
     
