--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li class="listLogo"><img src="/images/logo.webp" alt=companyLogo></li>
             <li><a  href="index.html" src="">Home</a></li>
-            <li><p  onclick="scrollToDiv('redFoxServices')" src="">Services</p></li>
+            <li><a  href="services.html" src="">Services</a></li>
             <li><p  onclick="scrollToDiv('testimonialSection')" src="">Testimonials</p></li>
             <li><a  href="contact.html" src="">Contact</a></li>
         </ul>    
@@ -112,7 +112,7 @@
             <div class="serviceContent">
                 <h4>Financial Management</h4>
                 <p>In the Clive area, our specialty lies in delivering personalized bookkeeping services, ensuring optimal financial health for businesses. With our proficiency in Wage Point management and financial statement creation, we're equipped to guide businesses toward efficient and profitable operations, also offering strategic advice to maximize savings.</p>
-             <button onclick="scrollToDiv('testimonialSection')"class="primaryButton">Hear from Our Clients  <img src="/images/rightArrow.png"></button>
+             <button onclick="scrollToDiv('testimonialSection')"class="primaryButton">View Full Services List<img src="/images/rightArrow.png"></button>
             </div>
         </div>
         <div class="service">
