--- a/services.html
+++ b/services.html
@@ -78,8 +78,12 @@
 
     <div class="serviceSection">
         <div class="serviceTitle">
-            <span><p>1</p></span>
-            <h3>Weekly & Monthly Bookkeeping Services</h3>
+            <div class="numberImages">
+                <img src="/images/wheat-grains.png" alt="grainImage">
+                <span><p>1</p></span>
+                <img src="/images/wheat-grains.png" alt="grainImage">
+            </div>
+            <h3>Weekly & Monthly Bookkeeping</h3>
             <p>CanDo Bookkeeping will:</p>
         </div>
       
@@ -107,8 +111,12 @@
     </div>
     <div class="serviceSection">
         <div class="serviceTitle">
-            <span><p>2</p></span>
-            <h3>On-Site Bookkeeping Services</h3>
+            <div class="numberImages">
+                <img src="/images/wheat-grains.png" alt="grainImage">
+                <span><p>2</p></span>
+                <img src="/images/wheat-grains.png" alt="grainImage">
+            </div>
+            <h3>On-Site Bookkeeping</h3>
             <p>CanDo Bookkeeping will:</p>
         </div>
         
@@ -133,7 +141,11 @@
     </div>
     <div class="serviceSection">
         <div class="serviceTitle">
-            <span><p>3</p></span>
+            <div class="numberImages">
+                <img src="/images/wheat-grains.png" alt="grainImage">
+                <span><p>3</p></span>
+                <img src="/images/wheat-grains.png" alt="grainImage">
+            </div>
             <h3>Year End Catch Up</h3>
             <p>CanDo Bookkeeping will:</p>
         </div>
@@ -153,7 +165,11 @@
     </div>
     <div class="serviceSection">
         <div class="serviceTitle">
-            <span><p>4</p></span>
+            <div class="numberImages">
+                <img src="/images/wheat-grains.png" alt="grainImage">
+                <span><p>4</p></span>
+                <img src="/images/wheat-grains.png" alt="grainImage">
+            </div>
             <h3>Other Services</h3>
             <p>CanDo Bookkeeping will:</p>
         </div>
