--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <b>Mastering Numbers, Maximizing Success!</b>
         </div>
         <span class="line"></span>
-        <p class="supportingDetails">The tax season clock is ticking fast! Be an early bird, book your year-end accounting now, and enjoy a 10% discount! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, numquam!</p>
+        <p class="supportingDetails">The tax season clock is ticking fast! Be an early bird, book your year-end accounting now and enjoy a 10% discount! </p>
         <div class="buttons">
             <a href="contact.html" ><button class=primaryButton>Contact Us <img src="/images/rightArrow.png"></button></a>
             <a href="https://www.facebook.com/CanDoBookkeepingServices" ><button class=primaryButton>Visit Our Facebook <img src="/images/rightArrow.png"></button></a>
