--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@
 
     <div class="logoAndDescription section">
         <div class=footerLogo><img src="images/logo.webp" alt="companyLogo"></div>
-        <p>Red Fox Exteriors: Strathmore's leading outdoor specialists, offering roofing, siding, decks, demolition, and more.</p>
+        <p>
+            Cando Bookkeeping: Clive's QuickBooks expert for personalized financial solutions. Timely, transparent, and tailored to your needs.</p>
     </div>
 
     <div class="navigation section">
