--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <p>Follow Us</p>
             <a alt="Visit our Facebook" href="https://www.facebook.com/CanDoBookkeepingServices/">  <div class="fa fa-facebook"></div></a>
         </div>
-       
+        
     </div>
+  
     <a alt="Call Us Today" href="tel:403-425-0765" ><button class="primaryButton"><div class="fa fa-phone"></div>&nbsp; (123) 456-7890</button></a>
-
     <div class="hamburgerMenu">
         <input type="checkbox" id="hamburgerCheckbox" onclick="burgerMenu()" label="checkboxForMenu">
         <span></span>
@@ -373,7 +373,7 @@
        <ul>
         <li><b>Navigation</b></li>
         <li><a href="index.html">Home</a></li>
-        <li><p  onclick="scrollToDiv('redFoxServices', 'home')" src="">Services</p></li>
+        <li><a href="services.html">Services</a></li>
         <li><p  onclick="scrollToDiv('testimonialSection', 'home')" src="">Testimonials</p></li>
         <li><a href="contact.html">Contact Us</a></li>
        </ul>
@@ -394,7 +394,7 @@
     <div class="contact section">
         <ul>
             <li><b>Contact Us</b></li>
-            <li><a href= "tel:403-325-0765"><div class="fa fa-phone"></div>403-325-0765</a></li>
+            <li><a href= "tel:403-304-0212"><div class="fa fa-phone"></div>(403) 304-0212</a></li>
             <li><a href="https://www.facebook.com/CanDoBookkeepingServices/"><div class="fa fa-facebook"></div>Facebook</a></li>
         </ul>
     </div>
