--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="serviceContent">
                 <h4>Financial Management</h4>
                 <p>In the Clive area, our specialty lies in delivering personalized bookkeeping services, ensuring optimal financial health for businesses. With our proficiency in Wage Point management and financial statement creation, we're equipped to guide businesses toward efficient and profitable operations, also offering strategic advice to maximize savings.</p>
-             <button onclick="scrollToDiv('testimonialSection')"class="primaryButton">View Full Services List<img src="/images/rightArrow.png"></button>
+             <a href="services.html"><button class="primaryButton">View Full Services List<img src="/images/rightArrow.png"></button></a>
             </div>
         </div>
         <div class="service">
@@ -120,7 +120,7 @@
             <div class="serviceContent">
                 <h4>QuickBooks Canada Expertise</h4>
                 <p>As the sole Pro Advance Advisor in the Clive area, we are adept at rectifying any issues within QuickBooks, setting us apart from regular Pro Advisors. With the imminent shutdown of the QuickBooks app, it's pivotal for businesses to transition seamlessly to the online version.. A hallmark of our service is our dedication to staying updated with the latest news, ensuring our clients not only save money but also avoid unnecessary complications and grief.</p>
-             <button onclick="scrollToDiv('testimonialSection')"class="primaryButton">Hear from Our Clients  <img src="/images/rightArrow.png"></button>
+                <a href="services.html"><button class="primaryButton">View Full Services List<img src="/images/rightArrow.png"></button></a>
             </div>
           
         </div>
@@ -129,7 +129,7 @@
             <div class="serviceContent">
                 <h4>Compliance & Reporting</h4>
                 <p>We excel in ensuring businesses adhere to financial standards and regulations. From the precise preparation of T-4s to adept handling of GST returns and timely remittances, our services prioritize accuracy and compliance. Coupled with our meticulous year-end preparations, we aim to streamline reporting processes, ensuring peace of mind for our clients. Note: We do not offer tax services.</p>
-             <button onclick="scrollToDiv('testimonialSection')"class="primaryButton">Hear from Our Clients  <img src="/images/rightArrow.png"></button>
+                <a href="services.html"><button class="primaryButton">View Full Services List<img src="/images/rightArrow.png"></button></a>
             </div>
         </div>
        
