--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website Description">
+    <meta name="description" content="CanDo Bookkeeping: Your Clive, Alberta QuickBooks expert. Reliable bookkeeping services tailored for Alberta businesses. Simplify your finances for success.">
+
     
 
     <link rel="icon" href="/images/logoDarker.png">
