--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
             <label for="generalInfo">What Can We Help You With Today? </label>
             <textarea id="generalInfo" name="generalInfo" placeholder="Additional details or a summary of the job you are looking for specifically..."></textarea>
         
-            <button type="submit" class="primaryButton">Submit Form<img src="/images/rightArrow.png"></button>
+            <button type="submit" class="primaryButton">Submit Form<img src="/images/rightArrow.png" alt="rightArrow"></button>
         </form>
         
     </div>
