--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 
     
 
-    <link rel="icon" href="/images/logoDarker.png">
+    <link rel="icon" href="/images/logoDarker.webp">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 
@@ -79,9 +79,9 @@
     <div class="serviceSection">
         <div class="serviceTitle">
             <div class="numberImages">
-                <img src="/images/wheat-grains.png" alt="grainImage">
+                <img src="/images/wheat-grains.webp" alt="grainImage">
                 <span><p>1</p></span>
-                <img src="/images/wheat-grains.png" alt="grainImage">
+                <img src="/images/wheat-grains.webp" alt="grainImage">
             </div>
             <h3>Weekly & Monthly Bookkeeping</h3>
             <p>CanDo Bookkeeping will:</p>
@@ -112,9 +112,9 @@
     <div class="serviceSection">
         <div class="serviceTitle">
             <div class="numberImages">
-                <img src="/images/wheat-grains.png" alt="grainImage">
+                <img src="/images/wheat-grains.webp" alt="grainImage">
                 <span><p>2</p></span>
-                <img src="/images/wheat-grains.png" alt="grainImage">
+                <img src="/images/wheat-grains.webp" alt="grainImage">
             </div>
             <h3>On-Site Bookkeeping</h3>
             <p>CanDo Bookkeeping will:</p>
@@ -142,9 +142,9 @@
     <div class="serviceSection">
         <div class="serviceTitle">
             <div class="numberImages">
-                <img src="/images/wheat-grains.png" alt="grainImage">
+                <img src="/images/wheat-grains.webp" alt="grainImage">
                 <span><p>3</p></span>
-                <img src="/images/wheat-grains.png" alt="grainImage">
+                <img src="/images/wheat-grains.webp" alt="grainImage">
             </div>
             <h3>Year End Catch Up</h3>
             <p>CanDo Bookkeeping will:</p>
@@ -166,9 +166,9 @@
     <div class="serviceSection">
         <div class="serviceTitle">
             <div class="numberImages">
-                <img src="/images/wheat-grains.png" alt="grainImage">
+                <img src="/images/wheat-grains.webp" alt="grainImage">
                 <span><p>4</p></span>
-                <img src="/images/wheat-grains.png" alt="grainImage">
+                <img src="/images/wheat-grains.webp" alt="grainImage">
             </div>
             <h3>Other Services</h3>
             <p>CanDo Bookkeeping will:</p>
