alt messages causing problems?

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </ul>    
         <div class="navSocials">
             <p>Follow Us</p>
-            <a alt="Visit our Facebook" href="https://www.facebook.com/CanDoBookkeepingServices/">  <div class="fa fa-facebook"></div></a>
+            <a href="https://www.facebook.com/CanDoBookkeepingServices/">  <div class="fa fa-facebook"></div></a>
         </div>
         
     </div>
   
-    <a alt="Call Us Today" href="tel:403-425-0765" ><button class="primaryButton"><div class="fa fa-phone"></div>&nbsp; (403) 304-0212</button></a>
+    <a href="tel:403-425-0765" ><button class="primaryButton"><div class="fa fa-phone"></div>&nbsp; (403) 304-0212</button></a>
     <div class="hamburgerMenu">
         <input type="checkbox" id="hamburgerCheckbox" onclick="burgerMenu()" label="checkboxForMenu">
         <span></span>
