--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
     </div>
   
-    <a alt="Call Us At This Number Today" href="tel:403-425-0765" ><button class="primaryButton"><div class="fa fa-phone"></div>&nbsp; (403) 304-0212</button></a>
+    <a aria-label="Call Us At This Number Today" href="tel:403-425-0765" ><button class="primaryButton"><div class="fa fa-phone"></div>&nbsp; (403) 304-0212</button></a>
     <div class="hamburgerMenu">
         <input type="checkbox" id="hamburgerCheckbox" onclick="burgerMenu()" label="checkboxForMenu">
         <span></span>
