--- a/contact.html
+++ b/contact.html
@@ -31,12 +31,12 @@
         </ul>    
         <div class="navSocials">
             <p>Follow Us</p>
-            <a alt="Visit our Facebook" href="https://www.facebook.com/CanDoBookkeepingServices/">  <div class="fa fa-facebook"></div></a>
+            <a aria-label="Visit Our Facebook Page Here" href="https://www.facebook.com/CanDoBookkeepingServices/">  <img class="facebook" src="/images/facebook.webp" alt="Faceboook Logo"></a>
         </div>
         
     </div>
   
-    <a alt="Call Us Today" href="tel:403-425-0765" ><button class="primaryButton"><div class="fa fa-phone"></div>&nbsp; (403) 304-0212</button></a>
+    <a aria-label="Call Us At This Number Today" href="tel:403-304-0212" ><button class="primaryButton"><img class="phoneIcon" src="/images/phone.webp" alt="Phone Logo">&nbsp; (403) 304-0212</button></a>
     <div class="hamburgerMenu">
         <input type="checkbox" id="hamburgerCheckbox" onclick="burgerMenu()" label="checkboxForMenu">
         <span></span>
@@ -44,7 +44,6 @@
         <span></span>
     </div>
 </div>
-
 <!-----------------------------------NAVIGATION-------------------------------------------->
 
 <!-----------------------------------LANDINGSECTION---------------------------------------->
@@ -188,8 +187,8 @@
     <div class="contact section">
         <ul>
             <li><b>Contact Us</b></li>
-            <li><a href= "tel:403-304-0212"><div class="fa fa-phone"></div>(403) 304-0212</a></li>
-            <li><a href="https://www.facebook.com/CanDoBookkeepingServices/"><div class="fa fa-facebook"></div>Facebook</a></li>
+            <li><a href= "tel:403-304-0212"><img class="phoneIcon" src="/images/phone.webp" alt="Phone Logo">(403) 304-0212</a></li>
+            <li><a href="https://www.facebook.com/CanDoBookkeepingServices/"><img class="facebook" src="/images/facebook.webp" alt="Faceboook Logo">Facebook</a></li>
         </ul>
     </div>
 
